--- a/src/components/PostCard/styles.module.css
+++ b/src/components/PostCard/styles.module.css
@@ -2,4 +2,12 @@
   box-shadow: 0 0 10px #ddd;
   padding: 10px;
   border-radius: 10px;
+  cursor: pointer;
+  border: 5px solid #fff;
+
+  transition: all 0.4s ease;
+}
+
+.post-card:hover {
+  border-color: #743ad5;
 }
