--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -16,3 +16,13 @@
     padding: 0 2rem;
   }
 }
+
+@media (max-width: 1200px) {
+  .container {
+    padding: 0 2rem;
+  }
+  .posts-skeleton-container,
+  .posts-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
