--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -18,11 +18,15 @@
 }
 
 @media (max-width: 1200px) {
-  .container {
-    padding: 0 2rem;
-  }
   .posts-skeleton-container,
   .posts-container {
     grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 768px) {
+  .posts-skeleton-container,
+  .posts-container {
+    grid-template-columns: 1fr;
   }
 }
