--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -4,6 +4,11 @@
   grid-template-columns: repeat(4, 1fr);
   gap: 1rem;
   max-width: 100%;
+  margin: 1rem 0;
+}
+
+.home-heading {
+  margin-top: 1rem;
 }
 
 .container {
