--- a/src/components/Navbar/styles.module.css
+++ b/src/components/Navbar/styles.module.css
@@ -1,5 +1,5 @@
 .navbar {
-  background: #e2e2e2;
+  background: #e8e8e8;
   position: sticky;
   top: 0;
 }
@@ -14,7 +14,12 @@
   font-weight: 500;
 }
 
-.navbar ul li:hover {
+.navbar ul li a {
+  text-decoration: none;
+  color: #424242;
+}
+
+.navbar ul li a:hover {
   color: #743ad5;
   cursor: pointer;
   transition: 0.4s ease;
