--- a/src/components/PostCard/styles.module.css
+++ b/src/components/PostCard/styles.module.css
@@ -8,6 +8,15 @@
   margin-bottom: 1rem;
 }
 
+.post-card h2 {
+  color: #424242;
+  margin-bottom: 1rem;
+}
+
+.post-card p {
+  line-height: 2rem;
+}
+
 .post-card:hover {
   border-color: #743ad5;
 }
