--- a/src/styles/createPost.module.css
+++ b/src/styles/createPost.module.css
@@ -32,6 +32,7 @@
   width: max-content;
   padding: 1rem;
   border: 2px solid #ddd;
+  color: #743ad5;
   background: transparent;
   font-family: "Montserrat", sans-serif;
   font-weight: 600;
