--- a/src/styles/createPost.module.css
+++ b/src/styles/createPost.module.css
@@ -31,7 +31,7 @@
 .create-post button {
   width: max-content;
   padding: 1rem;
-  border: 2px solid #ddd;
+  border: 2px solid #743ad5;
   color: #743ad5;
   background: transparent;
   font-family: "Montserrat", sans-serif;
@@ -44,4 +44,8 @@
 
 .create-post button:hover {
   border-color: #743ad5;
+}
+.create-post button:disabled {
+  border-color: #ddd;
+  color: #ddd;
 }
